# KoiUtility

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  observable_example.cpp
include/utility/: callback.hpp  enums.hpp
include/utility/templates/: observable.hpp  observer.hpp  publisher.hpp  subscriber.hpp
